<resources>
    <string name="app_name">CHESS for Android</string>
    <string name="play_online">Jugar en línea</string>
    <string name="username">Nombre de usuario:</string>
    <string name="password">Contraseña:</string>
    <string name="login">Iniciar sesión</string>
    <string name="guest">Jugar como invitado</string>
    <string name="play_offline">Jugar sin conexión</string>
    <string name="about_us">Acerca de…</string>
    <string name="preferences">Preferencias</string>
    <string name="LEVEL">Nivel:</string>
    <string name="ELO">ELO:</string>
    <string name="history">Historial</string>
    <string name="wins">Victorias:</string>
    <string name="loss">Derrotas:</string>
    <string name="draws">Tablas:</string>
    <string name="signup">Registrarse</string>
    <string name="logout">Cerrar sesión</string>
    <string name="total">Jugadas:</string>
    <string name="chess">CHESSforAndroid</string>
    <string name="settings">Ajustes</string>
    <string name="contact">Contacto:</string>
    <string name="port">Puerto:</string>
    <string name="cancel">Cancelar</string>
    <string name="accept">Aceptar</string>
    <string name="confirm">Confirmar</string>
    <string name="exit">Salir</string>
    <string name="draw">Tablas</string>
    <string name="resign">Rendirse</string>
    <string name="create_room">Crear una nueva sala</string>
    <string name="create">Crear partida</string>
    <string name="join_room">Unirse a una sala</string>
    <string name="join">Unirse</string>
    <string name="write_code">Escribe aquí el código…</string>
    <string name="waiting">Esperando jugadores…</string>
    <string name="matchmaking">Buscar partida</string>
    <string name="turn">Comienzan las blancas</string>
    <string name="white">Blancas</string>
    <string name="black">Negras</string>
    <string name="white_move">Mueven las blancas</string>
    <string name="you_win">¡Has ganado!</string>
    <string name="you_lose">¡Has perdido!</string>
    <string name="black_move">Mueven las negras</string>
    <string name="black_win">Ganan las negras</string>
    <string name="white_win">Ganan las blancas</string>
    <string name="winner_is">El ganador es</string>
    <string name="draw_offered">Tablas ofrecidas al rival</string>
    <string name="rival_offered_draw">El rival ofrece tablas</string>
    <string name="draw_declined">"El rival rechaza las tablas"</string>
    <string name="draw_accepted">Tablas por mutuo acuerdo</string>
    <string name="change_pass">Cambiar contraseña</string>
    <string name="old_pass">Contraseña antigua:</string>
    <string name="new_pass">Nueva contraseña:</string>
    <string name="my_account">Mi cuenta</string>
    <string name="show_achievements">Mostrar logros:</string>
    <string name="win_10">Gana 10 partidas</string>
    <string name="win_20">Gana 20 partidas</string>
    <string name="win_30">Gana 30 partidas</string>
    <string name="movs_10">Gana una partida en menos de 10 movimientos</string>
    <string name="movs_40">Gana una partida de más de 40 movimientos</string>
    <string name="level_5">Alcanza el nivel 5</string>
    <string name="level_10">Alcanza el nivel 10</string>
    <string name="game_over">Completa todos los logros</string>
    <string name="developer_mode">Modo desarrollador</string>
    <string name="play_friend">Jugar con un amigo</string>
    <string name="play">Jugar</string>
    <string name="ranking">Ranking</string>
    <string name="show_ranking">Mostrar clasificación</string>
    <string name="loading_data">Cargando datos…</string>
    <string name="position">Posición</string>
    <string name="player">Jugador</string>
    <string name="elo">ELO</string>
    <string name="level">Nivel</string>
    <string name="order_by_elo">Ordenar por ELO</string>
    <string name="elo_summary">Si no está seleccionada, la clasificación se ordenará por el nivel de cuenta de los jugadores</string>
    <string name="twitter">/@chessforandroid</string>
    <string name="mail">"chessforandroi@gmail.com"</string>
    <string name="DONE">COMPLETADO ✔️</string>
    <string name="NOT_DONE"> ❌</string>
    <string name="total_achievements">Logros completados:</string>
    <string name="your_code_is">Tu código es</string>
    <string name="customize_board">Personalizar tablero</string>
    <string name="must_reach_level_2">Debes alcanzar el nivel 2 para desbloquearlo</string>
    <string name="white_squares_color">Color de las casillas blancas</string>
    <string name="black_squares_color">Color de las casillas negras</string>
    <string name="check">Jaque</string>
    <string name="checkmate">Jaque mate</string>
    <string name="stalemate">Rey ahogado</string>
    <string name="play_white">Juegas con blancas</string>
    <string name="play_black">Juegas con negras</string>
    <string name="forfeit">Has perdido por abandono</string>
    <string name="deciding">El rival está decidiendo si acepta las tablas</string>
    <string name="already_offered">Ya has ofrecido tablas 3 veces</string>
    <string name="not_valid">Eso movimiento no es legal</string>
    <string name="congrats">¡Has completado todos los logros!</string>
    <string name="version">Version 1.0.0</string>
    <string name="game_started">Partida comenzada</string>
    <string name="never_flip">Mostrar las blancas siempre abajo</string>
    <string name="never_invert">Mostrar las negras invertidas en modo offline</string>
    <string name="flip_summary">Por defecto, si juegas con las piezas negras, estas se mostrarán en la parte inferior</string>
    <string name="invert_summary">Por defecto, en el modo Offline, las piezas negras se muestran invertidas</string>


</resources>