<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/ranking">

        <CheckBoxPreference
            android:id="@+id/cbPrefElo"
            android:defaultValue="false"
            android:key="preferencias_elo"
            android:summary="@string/elo_summary"
            android:title="@string/order_by_elo" />

        <CheckBoxPreference
            android:id="@+id/cbPrefRotar"
            android:defaultValue="false"
            android:key="preferencias_rotar"
            android:summary="@string/flip_summary"
            android:title="@string/never_flip" />

        <CheckBoxPreference
            android:id="@+id/cbPrefInvert"
            android:defaultValue="true"
            android:key="pref_invertida"
            android:summary="@string/invert_summary"
            android:title="@string/never_invert" />
    </PreferenceCategory>
</PreferenceScreen>