<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="#E6D6AE"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/play_offline"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bOffline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#A4552A"
            android:gravity="center"
            android:text="@string/play_offline" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/play_online"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bMatchmaking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#A4552A"
            android:text="@string/matchmaking" />

        <Button
            android:id="@+id/bPlayFriend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#A4552A"
            android:text="@string/play_friend" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/ranking"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textStyle="bold" />
        <Button
            android:id="@+id/bRanking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#A4552A"
            android:text="@string/show_ranking" />
    </LinearLayout>

</LinearLayout>